syntax = "proto3";

package benefit;

service BenefitService {
    rpc Create(Benefit) returns (Response) {}
    rpc Update(Benefit) returns (Response) {}
    rpc Delete(Benefit) returns (Response) {}
    rpc Get(Benefit) returns (Response) {}
    rpc All(Request) returns (Response) {}
}

message Benefit {
    string id = 1;
    string title = 2;
    string name = 3;
    string description = 4;
    string address = 5;
    string contact = 6;
    repeated string img = 7;
}

message Request {}

message Error {
    int32 code = 1;
    string description = 2;
}

message Response {
    int32 code = 1;
    Benefit benefit = 2;
    repeated Benefit benefits = 3;
    repeated Error errors = 4;
}