syntax = "proto3";

package user;

service UserService {
    rpc Create(Request) returns (Response) {}
    rpc Get(User) returns (Response) {}
    rpc All(Request) returns (Response) {}
    rpc ValidateToken(Token) returns (Token) {}
}

message User {
    string id = 1;
    string user_id = 2;
    string member_id = 3;
    string first_name = 4;
    string last_name = 5;
    string initial = 6;
    string email = 7;
    string trn = 8;
    string work_phone = 9;
    string home_phone = 10;
    string cell_phone = 11;
    string sponsor_id = 12;
    string address = 13;
    string parish = 14;
    string country = 15;
    string question = 16;
    string answer = 17;
    string dob = 18;
    string gender = 19;
    string stripe_id = 20;
    string plan_id = 21;
    string referral_code = 22;
}

message Token {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}

message Request {
    User user = 1;
    string token = 2;
    bool save_card = 3;
}

message Response {
    User user = 1;
    Error error = 2;
    repeated User users = 3;
    repeated Error errors = 4;
}

message Error {
    int32 code = 1;
    string description = 2;
}